Override failsafe plugin in LOCAL profile
IDEA uses both surefire and failsafe plugins while executing unit tests.
Failsafe plugin configuration in default profile uses network and suppresses
logging. That makes difficult to run tests locally.

Added failsafe plugin config to LOCAL profile similar to surefire.